static/styles.css
/* --- Global --- */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --lightgray: rgb(109, 109, 109);
  --darkgray: rgb(73, 73, 73);

  --nonphotoblue: #90e0ef;
  --lightcyan: #caf0f8;
  --zaffre: #3a0ca3;
  --pacificcyan: #00b4d8;
  --honolulublue: #0077b6;
  --federalblue: #03045e;
  --pureblue: #007bff;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  font-size: 16px;
  background: linear-gradient(to top, gray, black);
}

/* --- Text --- */
h1 {
  font-size: 3rem;
  color: white;
  margin-bottom: 15px;
}

h2 {
  color: white;
  font-size: 1rem;
}

/* --- Navbar --- */
nav {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100vw;
  background: linear-gradient(to bottom, var(--lightgray), var(--darkgray));
  border-bottom: 1px solid var(--darkgray);
}

/* Line breaks */
.break-dark {
  width: 1px;
  height: 100%;
  background-color: var(--darkgray);
}

.break-light {
  width: 1px;
  height: 100%;
  background-color: var(--lightgray);
}

/* Nav main panel */
.nav-main {
  list-style-type: none;
  display: flex;
  height: 100%;
}

.main-item {
  display: flex;
  align-items: center;
}

.nav-main a {
  color: white;
  text-decoration-line: none;
  padding: 15px 20px;
  height: 100%;
}

.nav-main a:hover {
  background: linear-gradient(to top, var(--lightgray), var(--darkgray));
}

/* Nav side panel */
.nav-side {
  list-style-type: none;
  display: flex;
  margin-left: auto;
  position: absolute;
  right: 20px;
}

.side-item {
  margin: 0 10px;
}

.nav-side a {
  color: white;
  text-decoration-line: none;
  background-color: gray;
  padding: 8px 15px;
  border: 1px solid var(--darkgray);
  border-radius: 50px;
}

.nav-side a:hover {
  background-color: var(--darkgray);
  border: 1px solid var(--lightgray);
  transition: all 0.3s ease;
}

/* --- Main --- */
main {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--lightgray);
  margin: 50px 0 10px 0;
  border-radius: 20px;
  border: 1px solid black;
  padding: 20px 30px;
}

.center {
  justify-content: center;
  align-items: center;
}

form {
  width: 100%;
}

/* --- Containers --- */
/* General */
.container {
  display: flex;
  flex-direction: column;
  gap: 5px;
  align-items: center;
  }

.field-row {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.field-column {
  display: flex;
  flex-direction: column;
}

.field-container {
  max-width: 200px;
  margin-bottom: 5px;
}

/* Create page */
.question-select_container {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.question-select_row {
  display: flex;
  gap: 15px;
}

.question-select_item {
  display: flex;
  width: 100%;
}

.question-type-select_row {
  display: flex;
  gap: 10px;
}

.generated-item_container {
  display: flex;
  flex-direction: column;
  margin: 20px 0;
  gap: 10px;
}

.generated-item_row {
  display: flex;

}

.generated-question_row {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

/* Bool type */
.bool_answer-row {
  display: flex;
  flex-direction: column;
  margin-left: 10px;
}

/* Multi type */
.multi_answer-column {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.multi_answer-column_inputs {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  gap: 5px;
}

.multi_option-column {
  display: flex;
  flex-direction: column;
  margin-left: 10px;
}

.multi_radio {
  flex-direction: column;
  justify-content: space-evenly;
  height: 100%;
}

/* Enter type */
.enter_answer-row {
  display: flex;
  flex-direction: column;
  width: 35%;
  margin-left: 10px;
}

/* --- Labels --- */
.label {
  color: white;
  white-space: nowrap;
}

.create-label {
  color: white;
  white-space: nowrap;
  display: flex;
  align-items: center;
  font-size: 1rem;
}

/* --- Inputs --- */
input {
  background-color: rgb(184, 184, 184);
  height: 1.8rem;
  border-radius: 5px;
  padding: 15px 5px;
  outline: none;
  width: 100%;
}
input:focus {
  background-color: rgb(233, 233, 233);
  box-shadow: 0 0 0 2px var(--pureblue);
  transition: all 0.5s;
}

.text-field {
  width: 100%;
}

/* --- Buttons --- */
/* General */
.field-btn {
  background-color: var(--pureblue);
  color: white;
  padding: 5px 10px;
  border-radius: 5px;
  border: solid 1px var(--darkgray);
}

.field-btn:hover {
  border: solid 1px white;
  transition: all 0.5s ease-out;
}

/* Radio buttons */
.radio-buttons {
  display: flex;
  gap: 10px;
}

.radio-buttons input[type="radio"] {
  display: none;
}

.radio-buttons label {
  padding: 4px 8px;
  background-color: white;
  color: black;
  cursor: pointer;
  user-select: none;
  white-space: nowrap;
  border-radius: 10px;
  border: 1px solid transparent;
}

.radio-buttons input[type="radio"]:checked + label {
  background-color: black;
  color: white;
  border: 1px solid white;
  transition: all 0.3s;
}

.radio-buttons label:hover {
  background-color: gray;
}

/* --- flash messages --- */
.failureMsg {
  display: block;
  gap: 5px;
  color: rgb(255, 0, 0);
}

.successMsg {
  display: block;
  gap: 5px;
  color: limegreen;
}
/* --- Icons --- */
.icon {
  margin: 0 4px 0 4px;
}

/* Profile page */
.avatar-container {
  border: solid 3px white;
  border-radius: 100px;
  overflow: hidden;
  width: fit-content;
  height: fit-content;
  margin: auto;
}

#profile-avatar {
  height: 150px;
  width: 150px;
  object-fit: cover;
}

#upload {
  min-height: 50px;
}

